feat: update flow code register
